@@ -32,9 +32,12 @@ namespace Castle.ActiveRecord.Tests
 		[SetUp]
 		public void Setup()
 		{
+			base.Init();
+			
 			ActiveRecordStarter.Initialize( GetConfigSource(), 
 				typeof(Blog), typeof(Post), 
 				typeof(OtherDbBlog), typeof(OtherDbPost), typeof(Test2ARBase) );
+			
 			Recreate();
 		}
 
